<resources>
    <string name="app_name">LittleThingsAndroidAI</string>
    <string name="sign_in_app_title">the little things</string>
    <string name="sign_in_app_icon_desc">Little Things app icon</string>
    <string name="sign_in_terms_text">I agree to the Terms of Service and Privacy Policy.</string>
    <string name="sign_in_google_button">Continue with Google</string>
    <string name="sign_in_google_icon_desc">Google icon</string>
    <string name="sign_in_terms_required">Please accept terms first.</string>
    <string name="sign_in_google_token_empty">Google token is missing.</string>
    <string name="sign_in_google_failed_code">Google sign-in failed (%1$d)</string>
    <!-- TODO: Replace with your real web client id from Firebase/Google Cloud Console. -->
    <string name="default_web_client_id">92621954916-ujfsjlbj9ubbs26ifcv0dq0af8jltck4.apps.googleusercontent.com</string>
    <string name="home_tab_calendar">Calendar</string>
    <string name="home_tab_thread">Thread</string>
    <string name="home_tab_insights">Insights</string>
    <string name="home_tab_user">User</string>
    <string name="home_tab_calendar_desc">Calendar tab</string>
    <string name="home_tab_thread_desc">Thread tab</string>
    <string name="home_tab_insights_desc">Insights tab</string>
    <string name="home_tab_user_desc">User tab</string>
    <string name="calendar_footer_current">%1$d stamps collected so far\n take your time with the %2$d days ahead</string>
    <string name="calendar_footer_current_last_day">%1$d stamps collected so far\n take your time today</string>
    <string name="calendar_footer_other">%1$d stamps collected this month</string>
    <string name="calendar_month_lock">The best is yet to come</string>
    <string name="calendar_stamp_more_badge">%1$d+</string>
    <string name="reflection_detail_back_desc">Back</string>
    <string name="calendar_today_question_header">Today\'s Spark</string>
    <string name="calendar_today_question_expand_desc">Show more questions</string>
    <string name="calendar_today_question_add_desc">Add answer</string>
    <string name="calendar_today_question_stub">Submit answer coming soon</string>
</resources>